--- a/public/h3.html
+++ b/public/h3.html
@@ -12,7 +12,8 @@
 <div class="pink">
     <!-- Floating GIF Container -->
     <div class="gif-container">
-       <div class="tenor-gif-embed" data-postid="11175798798170146360" data-share-method="host" data-aspect-ratio="1.29016" data-width="100%"><a href="https://tenor.com/view/shaking-cute-funny-cat-miss-you-gif-11175798798170146360">Shaking Cute GIF</a>from <a href="https://tenor.com/search/shaking-gifs">Shaking GIFs</a></div>
+       <!-- <div class="tenor-gif-embed" data-postid="11175798798170146360" data-share-method="host" data-aspect-ratio="1.29016" data-width="100%"><a href="https://tenor.com/view/shaking-cute-funny-cat-miss-you-gif-11175798798170146360">Shaking Cute GIF</a>from <a href="https://tenor.com/search/shaking-gifs">Shaking GIFs</a></div> -->
+         <img src="/images/plz.gif" alt="Moving GIF" width="200px"  style="position: relative; right: 25px;">
     </div>
 
     <!-- Text Below Sticker -->
