--- a/public/h4.html
+++ b/public/h4.html
@@ -12,10 +12,11 @@
 <div class="pink">
     <!-- Floating GIF Container -->
     <div class="gif-container">
-        <div class="tenor-gif-embed" data-postid="1501378038107654252" data-share-method="host" data-aspect-ratio="1.0628" data-width="100%">
+        <!-- <div class="tenor-gif-embed" data-postid="1501378038107654252" data-share-method="host" data-aspect-ratio="1.0628" data-width="100%">
             <a href="https://tenor.com/view/snek-bubu-babu-gif-1501378038107654252">Snek Bubu Sticker</a>
             from <a href="https://tenor.com/search/snek-stickers">Snek Stickers</a>
-        </div>
+        </div> -->
+         <img src="/images/love.gif" alt="Moving GIF" width="200px"  style="position: relative; right: 25px;">
     </div>
 
     <!-- Text Below Sticker -->
