--- a/public/h5.html
+++ b/public/h5.html
@@ -12,11 +12,12 @@
 <div class="pink">
     <!-- Floating GIF Container -->
     <div class="gif-container">
-        <div class="tenor-gif-embed" data-postid="1685630977016691906" data-share-method="host" data-aspect-ratio="1.23333" data-width="100%"><a href="https://tenor.com/view/hug-couple-cute-milk-and-mocha-in-love-gif-1685630977016691906">Hug Couple Sticker</a>from <a href="https://tenor.com/search/hug-stickers">Hug Stickers</a></div> 
+        <!-- <div class="tenor-gif-embed" data-postid="1685630977016691906" data-share-method="host" data-aspect-ratio="1.23333" data-width="100%"><a href="https://tenor.com/view/hug-couple-cute-milk-and-mocha-in-love-gif-1685630977016691906">Hug Couple Sticker</a>from <a href="https://tenor.com/search/hug-stickers">Hug Stickers</a></div>  -->
+          <img src="/images/giphy.gif" alt="Moving GIF" width="200px"  style="position: relative; right: 25px;">
     </div>
 
     <!-- Text Below Sticker -->
-    <span class="span">mujhe pta tha tum maan jaoge 💖</span>
+    <span class="span">mujhe pta tha tum maan jaoge 💖✨</span>
 </div>
 
 <!-- Buttons -->
