--- a/public/ht.html
+++ b/public/ht.html
@@ -11,11 +11,12 @@
 <!-- Pink Box with Text -->
 <div class="pink">
     <!-- Floating GIF Container -->
-    <div class="gif-container">
-        <div class="tenor-gif-embed" data-postid="10028448962889453040" data-share-method="host" data-aspect-ratio="1.2266" data-width="100%">
+    <div class="gif-container"> 
+        <!-- <div class="tenor-gif-embed" data-postid="10028448962889453040" data-share-method="host" data-aspect-ratio="1.2266" data-width="100%">
             <a href="https://tenor.com/view/cute-cat-cats-couple-love-gif-10028448962889453040">Cute Cat GIF</a> 
             from <a href="https://tenor.com/search/cute-gifs">Cute GIFs</a>
-        </div>
+        </div>  -->
+         <img src="/images/back.gif" alt="Moving GIF" width="200px" style="position: relative; right: 25px;">
     </div>
 
     <!-- Text Below Sticker -->
@@ -29,7 +30,7 @@
 </div>
 
 <!-- Tenor Script -->
-<script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+<!-- <script type="text/javascript" async src="https://tenor.com/embed.js"></script> -->
 
 </body>
 </html>
