--- a/public/h2.html
+++ b/public/h2.html
@@ -12,11 +12,12 @@
 <div class="pink">
     <!-- Floating GIF Container -->
     <div class="gif-container">
-      <div class="tenor-gif-embed" data-postid="16366241" data-share-method="host" data-aspect-ratio="1.07383" data-width="100%"><a href="https://tenor.com/view/cute-adorable-please-come-on-really-gif-16366241">Cute Adorable Sticker</a>from <a href="https://tenor.com/search/cute-stickers">Cute Stickers</a></div>
+      <!-- <div class="tenor-gif-embed" data-postid="16366241" data-share-method="host" data-aspect-ratio="1.07383" data-width="100%"><a href="https://tenor.com/view/cute-adorable-please-come-on-really-gif-16366241">Cute Adorable Sticker</a>from <a href="https://tenor.com/search/cute-stickers">Cute Stickers</a></div> -->
+        <img src="/images/giphy3.gif" alt="Moving GIF" width="200px"  style="position: relative; right: 25px;">
     </div>
 
     <!-- Text Below Sticker -->
-    <span class="span">plz maan jao naa💖</span>
+    <span class="span">plz maan jao naa💖💕</span>
 </div>
 
 <!-- Buttons -->
@@ -26,7 +27,7 @@
 </div>
 
 <!-- Tenor Script -->
-<script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+<!-- <script type="text/javascript" async src="https://tenor.com/embed.js"></script> -->
 
 </body>
 </html>
